/*
 * Copyright (c) 2019 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package toasttab.protokt.testing;

option java_package = "com.toasttab.protokt.testing";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Test {
  bytes val = 1;
}

message Test2 {
  bytes val = 1;
  string extra = 2;
}

message ListTest {
  repeated Test list = 1;
}

message MapTest {
  map<string, Test> map = 1;
}

message RepeatedTest {
  repeated string list = 1;
}

message RepeatedPackedTest {
  repeated int64 list = 1 [packed = true];
}

message RepeatedUnpackedTest {
  repeated int64 list = 1 [packed = false];
}

message RepeatedWktTest {
  repeated google.protobuf.Timestamp list = 1;
}

message RepeatedAnyTest {
  repeated google.protobuf.Any list = 1;
}

message Empty {
}
